# cuttle-parser

./: .gitignore  CMakeLists.txt  CppProperties.json  README.md  TODO.txt  cuttle-parser.project
src/: CMakeLists.txt  atom_token.hpp  call_tree.hpp  context.cpp  context.hpp  context_methods.hpp  formatted_character.cpp  formatted_character.hpp  function.cpp  function.hpp  function_id.hpp  function_priority.cpp  function_priority.hpp  function_priority_methods.hpp  invalid_function_id.hpp  number_token.hpp  parse_error.hpp  parser.cpp  parser.hpp  string_token.hpp  token.cpp  token.hpp  token_methods.hpp  tokenizer.cpp  tokenizer.hpp  tokenizer_config.hpp
tests/: CMakeLists.txt  function_test.cpp  function_test.hpp  main.cpp  test.cpp  test.hpp  test_file_access.cpp  test_function.cpp  test_function_priority.cpp  test_function_priority.hpp  test_manager.cpp  test_manager.hpp  test_parser.cpp  test_token.cpp  test_tokenizer.cpp  token_test.cpp  token_test.hpp  tokenizer_test.cpp  tokenizer_test.hpp
